--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+attrs==19.1.0
 dependency-injector==3.14.7
 falcon==2.0.0
 freeze==1.0.10
 gunicorn==19.9.0
+jsonschema==3.0.1
+pyrsistent==0.15.3
 six==1.12.0
+SQLAlchemy==1.3.5
 ujson==1.35
