--- a/.gitignore
+++ b/.gitignore
@@ -8,24 +8,23 @@
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
+.vscode/
 
 #####################################
 # .gitignore for Python Environment #
 #####################################
 # venv
 .pytest_cache/
-__pycache__
+__pycache__/
 *.pyc
 *.pyo
 *.py[cod]
 *.egg-info
 **/__pycache__/**
+*/__pycache__/*
 venv/
 */*.cpython-37.pyc
 venv/lib64
 venv/**
 .DS_Store
 src/.DS_Store
-
-
-
